Fix T46696: Voxel crash indexing over INT_MAX

Use int64_t for index values.