source/blender/blenlib/BLI_voxel.h
@@ -33,7 +33,11 @@
  */
 
 /** find the index number of a voxel, given x/y/z integer coords and resolution vector */
-#define BLI_VOXEL_INDEX(x, y, z, res) ((z) * (res)[1] * (res)[0] + (y) * (res)[0] + (x))
+
+#define BLI_VOXEL_INDEX(x, y, z, res) \
+	((int64_t)(x) + \
+	 (int64_t)(y) * (int64_t)(res)[0] + \
+	 (int64_t)(z) * (int64_t)(res)[0] * (int64_t)(res)[1])
 
 /* all input coordinates must be in bounding box 0.0 - 1.0 */
 float BLI_voxel_sample_nearest(float *data, const int res[3], const float co[3]);
